--- a/app/src/main/res/layout/fragment_dashborad_researcher.xml
+++ b/app/src/main/res/layout/fragment_dashborad_researcher.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ratinadeticpro.Ui.ui.ResercherDashBoard.DashboradResearcherFragment"
->
+    tools:context="com.example.ratinadeticpro.Ui.ui.ResercherDashBoard.DashboradResearcherFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -117,6 +116,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="0dp"
             android:layout_height="175dp"
             android:orientation="horizontal"
@@ -162,5 +162,17 @@
 
 
         </LinearLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButtonDash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="290dp"
+            android:background="@drawable/ic_keyboard_backspace_black_24dp"
+            android:clickable="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
