--- a/app/src/main/res/layout/fragment_chart_by_age.xml
+++ b/app/src/main/res/layout/fragment_chart_by_age.xml
@@ -20,7 +20,6 @@
             android:orientation="horizontal">
 
 
-
             <TextView
                 android:id="@+id/txt_type"
                 android:layout_width="65dp"
@@ -36,13 +35,14 @@
                 android:id="@+id/txt_eyepart"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:layout_marginStart="22dp"
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
-                android:layout_marginLeft="22dp"
                 android:text="eye side"
                 android:textColor="@color/wight"
                 android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/txt_date"
                 android:layout_width="0dp"
