--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -19,7 +19,6 @@
             android:orientation="horizontal">
 
 
-
             <TextView
                 android:id="@+id/txt_type"
                 android:layout_width="65dp"
@@ -35,12 +34,14 @@
                 android:id="@+id/txt_eyepart"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:layout_marginStart="22dp"
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
                 android:text="eye side"
                 android:textColor="@color/wight"
                 android:textSize="16sp" />
+
             <TextView
                 android:id="@+id/txt_date"
                 android:layout_width="0dp"
