--- a/app/src/main/res/navigation/nav_graph_2.xml
+++ b/app/src/main/res/navigation/nav_graph_2.xml
@@ -38,14 +38,21 @@
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_dashboradResearcherFragment_to_loginActivity2"
             app:destination="@id/loginActivity"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"/>
+            app:popExitAnim="@anim/slide_out_left" />
+        <action
+            android:id="@+id/action_dashboradResearcherFragment_to_aboutUsFrag"
+            app:destination="@id/aboutUsFrag"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <activity
         android:id="@+id/loginActivity"
@@ -90,15 +97,28 @@
         android:id="@+id/chartByAgeFragment"
         android:name="com.example.ratinadeticpro.Ui.ui.ChartByAge.ChartByAgeFragment"
         android:label="fragment_chart_by_age"
-        tools:layout="@layout/fragment_chart_by_age" >
+        tools:layout="@layout/fragment_chart_by_age">
         <action
             android:id="@+id/action_chartByAgeFragment_to_dashboradResearcherFragment"
             app:destination="@id/dashboradResearcherFragment"
-            app:popUpTo="@+id/loginActivity"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
             app:popExitAnim="@anim/slide_out_left"
+            app:popUpTo="@+id/loginActivity"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/aboutUsFrag"
+        android:name="com.example.ratinadeticpro.ui.ui.ResercherDashBoard.AboutUsFrag"
+        android:label="AboutUsFrag"
+        tools:layout="@layout/fragment_about_us_researcher">
+        <action
+            android:id="@+id/action_aboutUsFrag_to_dashboradResearcherFragment"
+            app:destination="@id/dashboradResearcherFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
 </navigation>
