--- a/app/src/main/res/layout/fragment_chart_by_age.xml
+++ b/app/src/main/res/layout/fragment_chart_by_age.xml
@@ -9,14 +9,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="com.example.ratinadeticpro.Ui.ui.ChartByAge">
+        tools:context="com.example.ratinadeticpro.ui.ui.ChartByAge">
 
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary" />
 
         <LinearLayout
             android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/colorAccent"
+            android:layout_marginTop="45dp"
+            android:background="@color/colorPrimary"
             android:orientation="horizontal">
 
 
@@ -26,10 +32,11 @@
                 android:layout_height="50dp"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
-                android:paddingLeft="20dp"
-                android:text="type"
+                android:paddingStart="20dp"
+                android:text="@string/type"
                 android:textColor="@color/wight"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                tools:ignore="RtlSymmetry" />
 
             <TextView
                 android:id="@+id/txt_eyepart"
@@ -39,7 +46,7 @@
                 android:layout_weight="1"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
-                android:text="eye side"
+                android:text="@string/eye_side"
                 android:textColor="@color/wight"
                 android:textSize="16sp" />
 
@@ -51,7 +58,7 @@
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
 
-                android:text="date"
+                android:text="@string/date"
                 android:textColor="@color/wight"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -73,7 +80,8 @@
             android:layout_gravity="center"
             android:background="@drawable/nodata"
             android:gravity="center_vertical"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            android:contentDescription="@string/nodata" />
 
         <ProgressBar
             android:id="@+id/prof"
@@ -90,10 +98,11 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/ic_keyboard_backspace_black_24dp"
+            android:background="@color/colorPrimary"
             android:clickable="true"
+            android:focusable="true"
+
             app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />
 
     </RelativeLayout>
