--- a/app/src/main/res/layout/activity_lunch_researcher_fragment.xml
+++ b/app/src/main/res/layout/activity_lunch_researcher_fragment.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Ui.ui.LunchResearcherFragment">
+        tools:context=".ui.ui.LunchResearcherFragment">
 
 
         <fragment
