--- a/app/src/main/res/layout/chart_fragment.xml
+++ b/app/src/main/res/layout/chart_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Ui.ui.Chart.ChartFragment">
+    tools:context=".ui.ui.chart.ChartFragment">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart"
