--- a/app/src/main/res/layout/fragment_chart_by_gender.xml
+++ b/app/src/main/res/layout/fragment_chart_by_gender.xml
@@ -5,7 +5,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Ui.ui.ChartByGender.ChartByGenderFragment">
+    tools:context=".ui.ui.chartByGender.ChartByGenderFragment">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart_gender"
