--- a/app/src/main/res/layout/fragment_chart_over_all.xml
+++ b/app/src/main/res/layout/fragment_chart_over_all.xml
@@ -5,20 +5,19 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Ui.ui.ChartOverAllFragment.ChartOverAllFragment">
+    tools:context=".ui.ui.chartOverAllFragment.ChartOverAllFragment">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="57dp" />
+        android:layout_margin="57dp"
+        android:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/prof"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:visibility="visible" />
 
