--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -1,72 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".ui.ui.resultFragment.ResultFragment">
 
-    tools:context=".Ui.ui.RsultFragment.ResultFragment"> <!--ImageView where image will be set-->
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:fitsSystemWindows="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="24dp"
+        android:paddingTop="32dp"
+        android:paddingRight="24dp">
 
-        <LinearLayout
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="92dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/logo"
+            android:contentDescription="@string/logo" /> <!-- com.example.ratinadeticpro.data.model.Email Label -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center_horizontal"
+            android:text="@string/the_result_for_your_image"
+            android:textColor="@color/cardview_dark_background"
+            android:textSize="25sp"
+            tools:ignore="PrivateResource" /> <!-- Password Label -->
+        <TextView
+            android:id="@+id/result_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="24dp"
-            android:paddingTop="32dp"
-            android:paddingRight="24dp">
+            android:layout_marginTop="16dp"
+            android:gravity="center_horizontal"
+            android:textColor="@color/design_default_color_error"
+            android:textSize="25sp"
+            tools:text="Choroidal neovascularization (CNV)" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="92dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="24dp"
-                android:src="@drawable/logo" /> <!-- com.example.ratinadeticpro.data.model.Email Label -->
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="center_horizontal"
-                android:text="The Result For Your Image"
-                android:textColor="@color/cardview_dark_background"
-                android:textSize="25sp" /> <!-- Password Label -->
-            <TextView
-                android:id="@+id/result_type"
+                android:id="@+id/result_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:gravity="center_horizontal"
-                android:textColor="@color/design_default_color_error"
                 android:textSize="25sp"
-                tools:text="Choroidal neovascularization (CNV)" />
 
-            <ScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                tools:text=" is the creation of new blood vessels in the choroid layer of the eye. Choroidal neovascularization is a common cause of neovascular degenerative maculopathy (i.e. ‘wet’ macular degeneration)commonly exacerbated by extreme myopia, malignant myopic degeneration, or age-related developments." />
+        </ScrollView>
 
-                <TextView
-                    android:id="@+id/result_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:gravity="center_horizontal"
-                    android:textSize="25sp"
-
-                    tools:text=" is the creation of new blood vessels in the choroid layer of the eye. Choroidal neovascularization is a common cause of neovascular degenerative maculopathy (i.e. ‘wet’ macular degeneration)commonly exacerbated by extreme myopia, malignant myopic degeneration, or age-related developments." />
-            </ScrollView>
-
-            <TextView
-                android:id="@+id/link_details"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="16dp"
-                android:gravity="center"
-                android:text="For More Details Click Here"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16dip" />
-        </LinearLayout>
-    </ScrollView>
-</FrameLayout>
+        <TextView
+            android:id="@+id/link_details"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:text="@string/for_more_details_click_here"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp" />
+    </LinearLayout>
+</ScrollView>
