--- a/app/src/main/res/navigation/nav_graph_2.xml
+++ b/app/src/main/res/navigation/nav_graph_2.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/dashboradResearcherFragment"
-        android:name="com.example.ratinadeticpro.Ui.ui.ResercherDashBoard.DashboradResearcherFragment"
+        android:name="com.example.ratinadeticpro.ui.ui.resercherDashBoard.DashboardResearcherFragment"
         android:label="fragment_dashborad_researcher"
         tools:layout="@layout/fragment_dashborad_researcher">
         <action
@@ -33,13 +33,6 @@
             app:popEnterAnim="@anim/slide_in_right"
             app:popExitAnim="@anim/slide_out_left" />
         <action
-            android:id="@+id/action_dashboradResearcherFragment_to_chartByAgeFragment"
-            app:destination="@id/chartByAgeFragment"
-            app:enterAnim="@anim/slide_in_left"
-            app:exitAnim="@anim/slide_out_right"
-            app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left" />
-        <action
             android:id="@+id/action_dashboradResearcherFragment_to_loginActivity2"
             app:destination="@id/loginActivity"
             app:enterAnim="@anim/slide_in_left"
@@ -53,10 +46,13 @@
             app:exitAnim="@anim/slide_out_right"
             app:popEnterAnim="@anim/slide_in_right"
             app:popExitAnim="@anim/slide_out_left" />
+        <action
+            android:id="@+id/action_dashboradResearcherFragment_to_chartByAgeFragment"
+            app:destination="@id/chartByAgeFragment" />
     </fragment>
     <activity
         android:id="@+id/loginActivity"
-        android:name="com.example.ratinadeticpro.Ui.ui.Login.LoginActivity"
+        android:name="com.example.ratinadeticpro.ui.ui.login.LoginActivity"
         android:label="LoginActivity"
         app:enterAnim="@anim/slide_in_left"
         app:exitAnim="@anim/slide_out_right"
@@ -65,7 +61,7 @@
         tools:layout="@layout/activity_login" />
     <fragment
         android:id="@+id/chartOverAllFragment"
-        android:name="com.example.ratinadeticpro.Ui.ui.ChartOverAllFragment.ChartOverAllFragment"
+        android:name="com.example.ratinadeticpro.ui.ui.chartOverAllFragment.ChartOverAllFragment"
         android:label="fragment_chart_over_all"
         tools:layout="@layout/fragment_chart_over_all">
         <action
@@ -80,7 +76,7 @@
     </fragment>
     <fragment
         android:id="@+id/chartByGenderFragment"
-        android:name="com.example.ratinadeticpro.Ui.ui.ChartByGender.ChartByGenderFragment"
+        android:name="com.example.ratinadeticpro.ui.ui.chartByGender.ChartByGenderFragment"
         android:label="ChartByGenderFragment"
         tools:layout="@layout/fragment_chart_by_gender">
         <action
@@ -94,27 +90,24 @@
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/chartByAgeFragment"
-        android:name="com.example.ratinadeticpro.Ui.ui.ChartByAge.ChartByAgeFragment"
-        android:label="fragment_chart_by_age"
-        tools:layout="@layout/fragment_chart_by_age">
-        <action
-            android:id="@+id/action_chartByAgeFragment_to_dashboradResearcherFragment"
-            app:destination="@id/dashboradResearcherFragment"
-            app:enterAnim="@anim/slide_in_left"
-            app:exitAnim="@anim/slide_out_right"
-            app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left"
-            app:popUpTo="@+id/loginActivity"
-            app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
         android:id="@+id/aboutUsFrag"
-        android:name="com.example.ratinadeticpro.ui.ui.ResercherDashBoard.AboutUsFrag"
+        android:name="com.example.ratinadeticpro.ui.ui.resercherDashBoard.AboutUsFrag"
         android:label="AboutUsFrag"
         tools:layout="@layout/fragment_about_us_researcher">
         <action
             android:id="@+id/action_aboutUsFrag_to_dashboradResearcherFragment"
+            app:destination="@id/dashboradResearcherFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
+    </fragment>
+    <fragment
+        android:id="@+id/chartByAgeFragment"
+        android:name="com.example.ratinadeticpro.ui.ui.reportsWithSearch.ChartByAgeFragment"
+        android:label="ChartByAgeFragment">
+        <action
+            android:id="@+id/action_chartByAgeFragment_to_dashboradResearcherFragment"
             app:destination="@id/dashboradResearcherFragment"
             app:enterAnim="@anim/slide_in_left"
             app:exitAnim="@anim/slide_out_right"
